load("@aspect_rules_py//py:defs.bzl", "py_library")

filegroup(
    name = "srcs",
    srcs = glob(["*.py"]),
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "fdbutil",
    srcs = [
        "__init__.py",
        "filter_fdb_entries.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)
