load("@aspect_rules_py//py:defs.bzl", "py_library")

filegroup(
    name = "srcs",
    srcs = glob(["*.py"]),
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "flow_counter_util",
    srcs = [
        "__init__.py",
        "route.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//tests/mock_tables",
    ],
)
