load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "bmc_techsupport",
    srcs = ["bmc_techsupport.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)

py_binary(
    name = "chassis_db_consistency_checker",
    srcs = ["chassis_db_consistency_checker.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)

py_binary(
    name = "check_db_integrity",
    srcs = ["check_db_integrity.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)

py_binary(
    name = "coredump_gen_handler",
    srcs = ["coredump_gen_handler.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//:common",
    ],
)

py_binary(
    name = "db_migrator",
    srcs = ["db_migrator.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//:common",
    ],
)

py_binary(
    name = "disk_check",
    srcs = ["disk_check.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)

py_binary(
    name = "dpu-tty",
    srcs = ["dpu-tty.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)

py_binary(
    name = "dualtor_neighbor_check",
    srcs = ["dualtor_neighbor_check.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)

py_binary(
    name = "dump_nat_entries",
    srcs = ["dump_nat_entries.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)

py_binary(
    name = "fast-reboot-dump",
    srcs = ["fast-reboot-dump.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)

py_binary(
    name = "fast-reboot-filter-routes",
    srcs = ["fast-reboot-filter-routes.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//:common",
    ],
)

py_binary(
    name = "gcu",
    srcs = ["gcu.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//generic_config_updater",
    ],
)

py_binary(
    name = "generate_shutdown_order",
    srcs = ["generate_shutdown_order.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//sonic_package_manager"],
)

py_binary(
    name = "lag_keepalive",
    srcs = ["lag_keepalive.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)

py_binary(
    name = "memory_threshold_check",
    srcs = ["memory_threshold_check.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//:common",
    ],
)

py_binary(
    name = "memory_threshold_check_handler",
    srcs = ["memory_threshold_check_handler.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//:common",
    ],
)

py_binary(
    name = "route_check",
    srcs = ["route_check.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//:common",
    ],
)

py_binary(
    name = "sonic_sku_create",
    srcs = ["sonic_sku_create.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)

py_binary(
    name = "storm_control",
    srcs = ["storm_control.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//:common",
        "//tests/mock_tables",
    ],
)

py_binary(
    name = "teamd_increase_retry_count",
    srcs = ["teamd_increase_retry_count.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)

py_binary(
    name = "techsupport_cleanup",
    srcs = ["techsupport_cleanup.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//:common",
    ],
)

py_binary(
    name = "update_json",
    srcs = ["update_json.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)

py_binary(
    name = "vnet_route_check",
    srcs = ["vnet_route_check.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)

filegroup(
    name = "srcs",
    srcs = glob(["**/*"]),
    visibility = ["//:__subpackages__"],
)

# Lots of tests depend on scripts, so we want to add them to //:all_deps
# However, //:scripts depends on //:all_deps, so we need this intermediate target to break the cycle
# keep
py_library(
    name = "scripts_srcs",
    srcs = [
        "bmc_techsupport.py",
        "chassis_db_consistency_checker.py",
        "check_db_integrity.py",
        "coredump_gen_handler.py",
        "db_migrator.py",
        "disk_check.py",
        "dpu-tty.py",
        "dualtor_neighbor_check.py",
        "dump_nat_entries.py",
        "fast-reboot-dump.py",
        "fast-reboot-filter-routes.py",
        "gcu.py",
        "generate_shutdown_order.py",
        "lag_keepalive.py",
        "mellanox_buffer_migrator.py",
        "memory_threshold_check.py",
        "memory_threshold_check_handler.py",
        "route_check.py",
        "sonic_sku_create.py",
        "storm_control.py",
        "teamd_increase_retry_count.py",
        "techsupport_cleanup.py",
        "update_json.py",
        "vnet_route_check.py",
    ],
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "scripts",
    srcs = [
        "bmc_techsupport.py",
        "chassis_db_consistency_checker.py",
        "check_db_integrity.py",
        "coredump_gen_handler.py",
        "db_migrator.py",
        "disk_check.py",
        "dpu-tty.py",
        "dualtor_neighbor_check.py",
        "dump_nat_entries.py",
        "fast-reboot-dump.py",
        "fast-reboot-filter-routes.py",
        "gcu.py",
        "generate_shutdown_order.py",
        "lag_keepalive.py",
        "mellanox_buffer_migrator.py",
        "memory_threshold_check.py",
        "memory_threshold_check_handler.py",
        "route_check.py",
        "sonic_sku_create.py",
        "storm_control.py",
        "teamd_increase_retry_count.py",
        "techsupport_cleanup.py",
        "update_json.py",
        "vnet_route_check.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//:common",
        "//generic_config_updater",
        "//sonic_package_manager",
        "//tests/mock_tables",
    ],
)
