load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "main",
    srcs = ["main.py"],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)

py_library(
    name = "sonic_cli_gen",
    srcs = [
        "__init__.py",
        "generator.py",
        "main.py",
        "yang_parser.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)
