load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "main",
    srcs = ["main.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//config",
        "//utilities_common",
    ],
)

py_library(
    name = "sonic_installer",
    srcs = [
        "__init__.py",
        "common.py",
        "exception.py",
        "main.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:all_deps",
        "//config",
        "//utilities_common",
    ],
)
